pdate to use new error handling
