# pkg/health/handler.go
@@ -1,9 +1,8 @@
 package health
 
 import (
-	"net/http"
-
 	"gitlab.com/developerdurp/stdmodels"
+	"net/http"
 )
 
 type Handler struct{}
@@ -18,13 +17,25 @@ func NewHandler() (*Handler, error) {
 //	@Description	Get the health of the API
 //	@Tags			health
 //	@Accept			json
-//	@Produce		application/json
+//	@Produce		application/jso
 //	@Success		200		{object}	stdmodels.StandardMessage	"response"
 //	@failure		500	{object}	stdmodels.StandardError"error"
 //
 // @Security Authorization
 //
 //	@Router			/health/gethealth [get]
-func (h *Handler) Get(w http.ResponseWriter, r *http.Request) {
-	stdmodels.SuccessResponse("OK", w, http.StatusOK)
+func (h *Handler) Get(w http.ResponseWriter, r *http.Request) (*stdmodels.StandardMessage, error) {
+
+	// err := stdmodels.StandardError{
+	//	Message: "This is a test",
+	//	Status:  500,
+	//	Description: []string{
+	//		"Test",
+	//		"test2",
+	//	},
+	// }
+	// return nil, err
+
+	resp := stdmodels.NewBasicResponse()
+	return resp, nil
 }
